--- a/index.html
+++ b/index.html
@@ -1,19 +1,191 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Strona główna</title>
-  </head>
-  <body style="background-color: lightblue; color: navy;">
-    <h1>Witaj!</h1>
-    <p>TANIE PRZYPONY</p>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8" />
+  <title>Strona główna</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: lightblue;
+      color: navy;
+      transition: 0.3s;
+      text-align: center;
+    }
 
-    <h2>SlipDRig</h2> <!-- Napis nad zdjęciem -->
+    .dark-mode {
+      background-color: #111;
+      color: #eee;
+    }
 
-    <img src="slipdrig.png" alt="Opis 3" width="300">
+    button {
+      padding: 10px 20px;
+      margin: 10px;
+      font-size: 16px;
+      cursor: pointer;
+      border: none;
+      border-radius: 5px;
+      background-color: #ffc107;
+    }
 
-    <a href="produkt.html">
-      <button>Zobacz produkt</button>
-    </a>
-  </body>
+    .dark-mode button {
+      background-color: #333;
+      color: white;
+    }
+
+    img {
+      margin: 10px 0;
+    }
+
+    .product {
+      border: 1px solid #ccc;
+      padding: 15px;
+      margin: 20px auto;
+      max-width: 400px;
+      border-radius: 10px;
+      background-color: white;
+    }
+
+    .dark-mode .product {
+      background-color: #222;
+      border-color: #444;
+    }
+
+    .toggle-button {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+    }
+
+    #cart {
+      position: fixed;
+      top: 50px;
+      left: 10px;
+      background: white;
+      padding: 10px;
+      border: 1px solid #ccc;
+      z-index: 1000;
+      text-align: left;
+      display: none;
+    }
+
+    .dark-mode #cart {
+      background: #222;
+      color: #eee;
+      border-color: #444;
+    }
+
+    input[type="text"] {
+      padding: 8px;
+      margin-top: 10px;
+      width: 100%;
+    }
+
+    .total {
+      font-weight: bold;
+      margin-top: 10px;
+    }
+  </style>
+</head>
+<body>
+  <button class="toggle-button" onclick="toggleDarkMode()">🌙 Tryb ciemny</button>
+
+  <!-- Koszyk -->
+  <div style="position: fixed; top: 10px; left: 10px;">
+    <button onclick="toggleCart()">🛒 Koszyk</button>
+  </div>
+
+  <div id="cart">
+    <h3>Twój koszyk:</h3>
+    <ul id="cart-items"></ul>
+    <div class="total" id="total-price">Łącznie: 0 zł</div>
+    <input type="text" id="adres" placeholder="Wpisz adres do wysyłki">
+    <button onclick="zamow()">Zamów i zapłać BLIK</button>
+  </div>
+
+  <h1>SIEMKA!</h1>
+  <p>TANIE PRZYPONY</p>
+
+  <!-- Produkt 1 -->
+  <div class="product">
+    <h2>SlipDRig</h2>
+    <img src="slipdrig.png" alt="SlipDRig" width="300">
+    <br>
+    <a href="produkt.html"><button>Zobacz produkt</button></a>
+    <button onclick="addToCart('SlipDRig', 7)">Dodaj do koszyka (7 zł)</button>
+  </div>
+
+  <!-- Produkt 2 -->
+  <div class="product">
+    <h2>Drig</h2>
+    <img src="drig.png" alt="Drig" width="300">
+    <br>
+    <a href="produkt2.html"><button>Zobacz produkt</button></a>
+    <button onclick="addToCart('Drig', 7)">Dodaj do koszyka (7 zł)</button>
+  </div>
+
+  <script>
+    function toggleDarkMode() {
+      document.body.classList.toggle("dark-mode");
+    }
+
+    function toggleCart() {
+      const cartDiv = document.getElementById("cart");
+      cartDiv.style.display = cartDiv.style.display === "none" ? "block" : "none";
+      updateCartDisplay();
+    }
+
+    let cart = JSON.parse(localStorage.getItem("koszyk")) || [];
+
+    function addToCart(name, price) {
+      cart.push({ name, price });
+      localStorage.setItem("koszyk", JSON.stringify(cart));
+      alert(name + " dodany do koszyka!");
+      updateCartDisplay();
+    }
+
+    function updateCartDisplay() {
+      const cartList = document.getElementById("cart-items");
+      const totalDiv = document.getElementById("total-price");
+      cartList.innerHTML = "";
+      let total = 0;
+
+      cart.forEach((item, index) => {
+        const li = document.createElement("li");
+        li.textContent = `${item.name} - ${item.price} zł`;
+
+        const removeBtn = document.createElement("button");
+        removeBtn.textContent = "Usuń";
+        removeBtn.style.marginLeft = "10px";
+        removeBtn.onclick = function () {
+          cart.splice(index, 1);
+          localStorage.setItem("koszyk", JSON.stringify(cart));
+          updateCartDisplay();
+        };
+
+        li.appendChild(removeBtn);
+        cartList.appendChild(li);
+        total += item.price;
+      });
+
+      totalDiv.textContent = `Łącznie: ${total} zł`;
+    }
+
+    function zamow() {
+      const adres = document.getElementById("adres").value.trim();
+      if (cart.length === 0) {
+        alert("Koszyk jest pusty!");
+        return;
+      }
+      if (!adres) {
+        alert("Wpisz adres wysyłki!");
+        return;
+      }
+      alert("Zamówienie złożone!\nAdres: " + adres + "\nDziękujemy za zakupy!");
+      cart = [];
+      localStorage.removeItem("koszyk");
+      updateCartDisplay();
+      document.getElementById("adres").value = "";
+    }
+  </script>
+</body>
 </html>
