--- a/index.html
+++ b/index.html
@@ -76,17 +76,12 @@
 
     footer {
       margin-top: 50px;
-      font-size: 14px;
+      padding: 20px;
+      background-color: #f8f9fa;
     }
 
-    footer a {
-      color: navy;
-      margin: 0 10px;
-      text-decoration: none;
-    }
-
-    .dark-mode footer a {
-      color: #ffc107;
+    .dark-mode footer {
+      background-color: #222;
     }
   </style>
 </head>
@@ -102,8 +97,8 @@
   <div id="cart">
     <h3>Twój koszyk:</h3>
     <ul id="cart-items"></ul>
-    <p id="total">Łączna kwota: 0 zł</p>
-    <button onclick="przejdzDoKoszyka()">Przejdź do koszyka</button>
+    <p><strong>Łączna kwota: <span id="total">0</span> zł</strong></p>
+    <button onclick="zlozZamowienie()">Zamawiam</button>
   </div>
 
   <h1>SIEMKA!</h1>
@@ -113,7 +108,6 @@
     <h2>SlipDRig - 7zł</h2>
     <img src="slipdrig.png" alt="SlipDRig" width="300">
     <br>
-    <a href="produkt.html"><button>Zobacz produkt</button></a>
     <button onclick="addToCart('SlipDRig', 7)">Dodaj do koszyka</button>
   </div>
 
@@ -121,13 +115,11 @@
     <h2>Drig - 7zł</h2>
     <img src="drig.png" alt="Drig" width="300">
     <br>
-    <a href="produkt2.html"><button>Zobacz produkt</button></a>
     <button onclick="addToCart('Drig', 7)">Dodaj do koszyka</button>
   </div>
 
   <footer>
-    <a href="regulamin.html">Regulamin</a> | 
-    <a href="polityka.html">Polityka prywatności</a>
+    <p><a href="#">Regulamin</a> | <a href="#">Polityka prywatności</a></p>
   </footer>
 
   <script>
@@ -135,39 +127,47 @@
       document.body.classList.toggle("dark-mode");
     }
 
-    function toggleCart() {
-      const cartDiv = document.getElementById("cart");
-      cartDiv.style.display = cartDiv.style.display === "none" ? "block" : "none";
-      updateCartDisplay();
-    }
+    let cart = [];
 
-    function addToCart(nazwa, cena) {
-      let koszyk = JSON.parse(localStorage.getItem("koszyk")) || [];
-      koszyk.push({ nazwa, cena });
-      localStorage.setItem("koszyk", JSON.stringify(koszyk));
-      alert(nazwa + " został dodany do koszyka!");
+    function addToCart(name, price) {
+      cart.push({ name, price });
+      alert(name + " dodano do koszyka!");
       updateCartDisplay();
     }
 
     function updateCartDisplay() {
-      let koszyk = JSON.parse(localStorage.getItem("koszyk")) || [];
       const cartList = document.getElementById("cart-items");
-      const total = document.getElementById("total");
+      const totalEl = document.getElementById("total");
       cartList.innerHTML = "";
-      let suma = 0;
+      let total = 0;
 
-      koszyk.forEach(item => {
+      cart.forEach(item => {
         const li = document.createElement("li");
-        li.textContent = item.nazwa + " - " + item.cena + " zł";
+        li.textContent = item.name + " - " + item.price + " zł";
         cartList.appendChild(li);
-        suma += item.cena;
+        total += item.price;
       });
 
-      total.textContent = "Łączna kwota: " + suma + " zł";
+      totalEl.textContent = total;
     }
 
-    function przejdzDoKoszyka() {
-      window.location.href = "koszyk.html";
+    function toggleCart() {
+      const cartDiv = document.getElementById("cart");
+      cartDiv.style.display = cartDiv.style.display === "none" ? "block" : "none";
+    }
+
+    function zlozZamowienie() {
+      if (cart.length === 0) {
+        alert("Koszyk jest pusty!");
+        return;
+      }
+
+      let adres = prompt("Podaj adres wysyłki:");
+      if (!adres) return;
+
+      alert("Dziękujemy za zamówienie! Szczegóły wysłane na: " + adres + "\nZapłać Blikiem: 123-456");
+      cart = [];
+      updateCartDisplay();
     }
   </script>
 </body>
