--- a/index.html
+++ b/index.html
@@ -58,14 +58,15 @@
 
     #cart {
       position: fixed;
-      top: 50px;
+      top: 60px;
       left: 10px;
       background: white;
-      padding: 10px;
+      padding: 15px;
       border: 1px solid #ccc;
       display: none;
       z-index: 1000;
       text-align: left;
+      max-width: 300px;
     }
 
     .dark-mode #cart {
@@ -74,50 +75,30 @@
       border-color: #444;
     }
 
-    footer {
-      margin-top: 40px;
+    input, textarea {
+      width: 90%;
+      padding: 8px;
+      margin-top: 10px;
     }
 
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1001;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0, 0, 0, 0.8);
+    .linki {
+      margin-top: 50px;
     }
 
-    .modal-content {
-      background-color: #fff;
-      margin: 15% auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 80%;
-      max-width: 500px;
-      border-radius: 10px;
+    .linki a {
+      color: navy;
+      margin: 0 15px;
+      text-decoration: underline;
     }
 
-    .modal-close {
-      float: right;
-      font-size: 24px;
-      cursor: pointer;
-    }
-
-    .dark-mode .modal-content {
-      background-color: #222;
-      color: #eee;
-      border-color: #444;
+    .dark-mode .linki a {
+      color: #ffc107;
     }
   </style>
 </head>
 <body>
-  <!-- Tryb ciemny -->
   <button class="toggle-button" onclick="toggleDarkMode()">🌙 Tryb ciemny</button>
 
-  <!-- Koszyk -->
   <div style="position: fixed; top: 10px; left: 10px;">
     <button onclick="toggleCart()">🛒 Koszyk</button>
   </div>
@@ -125,6 +106,9 @@
   <div id="cart">
     <h3>Twój koszyk:</h3>
     <ul id="cart-items"></ul>
+    <p>Łączna kwota: <span id="total">0</span> zł</p>
+    <input type="text" id="address" placeholder="Adres wysyłki"><br>
+    <button onclick="pay()">Zapłać BLIK</button>
   </div>
 
   <h1>SIEMKA!</h1>
@@ -134,38 +118,19 @@
     <h2>SlipDRig - 7 zł</h2>
     <img src="slipdrig.png" alt="SlipDRig" width="300">
     <br>
-    <a href="produkt.html"><button>Zobacz produkt</button></a>
-    <button onclick="addToCart('SlipDRig - 7 zł')">Dodaj do koszyka</button>
+    <button onclick="addToCart('SlipDRig', 7)">Dodaj do koszyka</button>
   </div>
 
   <div class="product">
     <h2>Drig - 7 zł</h2>
     <img src="drig.png" alt="Drig" width="300">
     <br>
-    <a href="produkt2.html"><button>Zobacz produkt</button></a>
-    <button onclick="addToCart('Drig - 7 zł')">Dodaj do koszyka</button>
+    <button onclick="addToCart('Drig', 7)">Dodaj do koszyka</button>
   </div>
 
-  <footer>
-    <button type="button" onclick="showModal('regulaminModal')">Regulamin</button>
-    <button type="button" onclick="showModal('politykaModal')">Polityka prywatności</button>
-  </footer>
-
-  <!-- Modale -->
-  <div id="regulaminModal" class="modal">
-    <div class="modal-content">
-      <span class="modal-close" onclick="hideModal('regulaminModal')">&times;</span>
-      <h2>Regulamin</h2>
-      <p>To przykładowy regulamin sklepu. Użytkownik zobowiązuje się do uczciwego korzystania z serwisu.</p>
-    </div>
-  </div>
-
-  <div id="politykaModal" class="modal">
-    <div class="modal-content">
-      <span class="modal-close" onclick="hideModal('politykaModal')">&times;</span>
-      <h2>Polityka prywatności</h2>
-      <p>Twoje dane są bezpieczne i nie będą udostępniane osobom trzecim.</p>
-    </div>
+  <div class="linki">
+    <a href="regulamin.html" target="_blank">Regulamin</a>
+    <a href="polityka.html" target="_blank">Polityka prywatności</a>
   </div>
 
   <script>
@@ -173,36 +138,70 @@
       document.body.classList.toggle("dark-mode");
     }
 
-    let cart = [];
+    let cart = JSON.parse(localStorage.getItem('koszyk')) || [];
 
-    function addToCart(productName) {
-      cart.push(productName);
+    function toggleCart() {
+      const cartDiv = document.getElementById("cart");
+      cartDiv.style.display = cartDiv.style.display === "none" ? "block" : "none";
+      updateCartDisplay();
+    }
+
+    function addToCart(productName, price) {
+      cart.push({ name: productName, price: price });
+      localStorage.setItem("koszyk", JSON.stringify(cart));
       alert(productName + " został dodany do koszyka!");
       updateCartDisplay();
     }
 
     function updateCartDisplay() {
       const cartList = document.getElementById("cart-items");
+      const totalDisplay = document.getElementById("total");
       cartList.innerHTML = "";
-      cart.forEach(item => {
+      let total = 0;
+
+      cart.forEach((item, index) => {
         const li = document.createElement("li");
-        li.textContent = item;
+        li.textContent = `${item.name} - ${item.price} zł`;
+
+        const removeBtn = document.createElement("button");
+        removeBtn.textContent = "Usuń";
+        removeBtn.style.marginLeft = "10px";
+        removeBtn.onclick = () => {
+          cart.splice(index, 1);
+          localStorage.setItem("koszyk", JSON.stringify(cart));
+          updateCartDisplay();
+        };
+
+        li.appendChild(removeBtn);
         cartList.appendChild(li);
+        total += item.price;
       });
+
+      totalDisplay.textContent = total;
     }
 
-    function toggleCart() {
-      const cartDiv = document.getElementById("cart");
-      cartDiv.style.display = cartDiv.style.display === "none" ? "block" : "none";
+    function pay() {
+      const address = document.getElementById("address").value;
+      if (!address) {
+        alert("Podaj adres wysyłki!");
+        return;
+      }
+      if (cart.length === 0) {
+        alert("Koszyk jest pusty!");
+        return;
+      }
+
+      alert("Dziękujemy za zamówienie! Płatność BLIK przyjęta.");
+      cart = [];
+      localStorage.removeItem("koszyk");
+      updateCartDisplay();
+      document.getElementById("address").value = "";
     }
 
-    function showModal(id) {
-      document.getElementById(id).style.display = "block";
-    }
-
-    function hideModal(id) {
-      document.getElementById(id).style.display = "none";
-    }
+    // Wyświetl koszyk po załadowaniu
+    window.onload = updateCartDisplay;
   </script>
 </body>
 </html>
+
+
