--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
       color: white;
     }
 
-    img {
-      margin: 10px 0;
-    }
-
     .product {
       border: 1px solid #ccc;
       padding: 15px;
@@ -58,15 +54,14 @@
 
     #cart {
       position: fixed;
-      top: 60px;
+      top: 50px;
       left: 10px;
       background: white;
-      padding: 15px;
+      padding: 10px;
       border: 1px solid #ccc;
       display: none;
       z-index: 1000;
       text-align: left;
-      max-width: 300px;
     }
 
     .dark-mode #cart {
@@ -75,30 +70,46 @@
       border-color: #444;
     }
 
-    input, textarea {
-      width: 90%;
-      padding: 8px;
-      margin-top: 10px;
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.8);
     }
 
-    .linki {
+    .modal-content {
+      background-color: white;
+      margin: 10% auto;
+      padding: 20px;
+      width: 80%;
+      max-width: 600px;
+      border-radius: 10px;
+      color: black;
+    }
+
+    .close {
+      color: red;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .footer {
       margin-top: 50px;
-    }
-
-    .linki a {
-      color: navy;
-      margin: 0 15px;
-      text-decoration: underline;
-    }
-
-    .dark-mode .linki a {
-      color: #ffc107;
     }
   </style>
 </head>
 <body>
+  <!-- Tryb ciemny -->
   <button class="toggle-button" onclick="toggleDarkMode()">🌙 Tryb ciemny</button>
 
+  <!-- Koszyk -->
   <div style="position: fixed; top: 10px; left: 10px;">
     <button onclick="toggleCart()">🛒 Koszyk</button>
   </div>
@@ -106,31 +117,49 @@
   <div id="cart">
     <h3>Twój koszyk:</h3>
     <ul id="cart-items"></ul>
-    <p>Łączna kwota: <span id="total">0</span> zł</p>
-    <input type="text" id="address" placeholder="Adres wysyłki"><br>
-    <button onclick="pay()">Zapłać BLIK</button>
+    <p id="cart-total"></p>
+    <button onclick="placeOrder()">Zamów</button>
   </div>
 
   <h1>SIEMKA!</h1>
   <p>TANIE PRZYPONY</p>
 
   <div class="product">
-    <h2>SlipDRig - 7 zł</h2>
+    <h2>SlipDRig – 7zł</h2>
     <img src="slipdrig.png" alt="SlipDRig" width="300">
     <br>
+    <a href="produkt.html"><button>Zobacz produkt</button></a>
     <button onclick="addToCart('SlipDRig', 7)">Dodaj do koszyka</button>
   </div>
 
   <div class="product">
-    <h2>Drig - 7 zł</h2>
+    <h2>Drig – 7zł</h2>
     <img src="drig.png" alt="Drig" width="300">
     <br>
+    <a href="produkt2.html"><button>Zobacz produkt</button></a>
     <button onclick="addToCart('Drig', 7)">Dodaj do koszyka</button>
   </div>
 
-  <div class="linki">
-    <a href="regulamin.html" target="_blank">Regulamin</a>
-    <a href="polityka.html" target="_blank">Polityka prywatności</a>
+  <div class="footer">
+    <button onclick="openModal('regulamin')">Regulamin</button>
+    <button onclick="openModal('polityka')">Polityka prywatności</button>
+  </div>
+
+  <!-- Modale -->
+  <div id="regulamin" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('regulamin')">&times;</span>
+      <h2>Regulamin</h2>
+      <p>Tu wpisz swój regulamin sklepu – np. zasady zakupów, reklamacji, zwrotów itd.</p>
+    </div>
+  </div>
+
+  <div id="polityka" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('polityka')">&times;</span>
+      <h2>Polityka prywatności</h2>
+      <p>Tu wpisz swoją politykę prywatności – jak przechowujesz dane klientów, kto ma do nich dostęp itd.</p>
+    </div>
   </div>
 
   <script>
@@ -138,70 +167,71 @@
       document.body.classList.toggle("dark-mode");
     }
 
-    let cart = JSON.parse(localStorage.getItem('koszyk')) || [];
+    let cart = JSON.parse(localStorage.getItem("cart")) || [];
 
-    function toggleCart() {
-      const cartDiv = document.getElementById("cart");
-      cartDiv.style.display = cartDiv.style.display === "none" ? "block" : "none";
+    function addToCart(product, price) {
+      cart.push({ name: product, price: price });
+      localStorage.setItem("cart", JSON.stringify(cart));
       updateCartDisplay();
-    }
-
-    function addToCart(productName, price) {
-      cart.push({ name: productName, price: price });
-      localStorage.setItem("koszyk", JSON.stringify(cart));
-      alert(productName + " został dodany do koszyka!");
-      updateCartDisplay();
+      alert(product + " dodany do koszyka!");
     }
 
     function updateCartDisplay() {
-      const cartList = document.getElementById("cart-items");
-      const totalDisplay = document.getElementById("total");
-      cartList.innerHTML = "";
-      let total = 0;
+      const list = document.getElementById("cart-items");
+      const total = document.getElementById("cart-total");
+      list.innerHTML = "";
+      let sum = 0;
 
       cart.forEach((item, index) => {
         const li = document.createElement("li");
-        li.textContent = `${item.name} - ${item.price} zł`;
+        li.textContent = `${item.name} – ${item.price} zł`;
 
-        const removeBtn = document.createElement("button");
-        removeBtn.textContent = "Usuń";
-        removeBtn.style.marginLeft = "10px";
-        removeBtn.onclick = () => {
+        const btn = document.createElement("button");
+        btn.textContent = "Usuń";
+        btn.onclick = () => {
           cart.splice(index, 1);
-          localStorage.setItem("koszyk", JSON.stringify(cart));
+          localStorage.setItem("cart", JSON.stringify(cart));
           updateCartDisplay();
         };
 
-        li.appendChild(removeBtn);
-        cartList.appendChild(li);
-        total += item.price;
+        li.appendChild(btn);
+        list.appendChild(li);
+        sum += item.price;
       });
 
-      totalDisplay.textContent = total;
+      total.textContent = "Łącznie: " + sum + " zł";
     }
 
-    function pay() {
-      const address = document.getElementById("address").value;
-      if (!address) {
-        alert("Podaj adres wysyłki!");
-        return;
-      }
+    function toggleCart() {
+      const cartBox = document.getElementById("cart");
+      cartBox.style.display = cartBox.style.display === "none" ? "block" : "none";
+      updateCartDisplay();
+    }
+
+    function placeOrder() {
       if (cart.length === 0) {
         alert("Koszyk jest pusty!");
         return;
       }
 
-      alert("Dziękujemy za zamówienie! Płatność BLIK przyjęta.");
-      cart = [];
-      localStorage.removeItem("koszyk");
-      updateCartDisplay();
-      document.getElementById("address").value = "";
+      const address = prompt("Podaj adres dostawy:");
+      if (address) {
+        alert("Dziękujemy za zamówienie!\nWyślemy na adres: " + address + "\nPłatność: BLIK");
+        cart = [];
+        localStorage.setItem("cart", JSON.stringify(cart));
+        updateCartDisplay();
+      }
     }
 
-    // Wyświetl koszyk po załadowaniu
-    window.onload = updateCartDisplay;
+    function openModal(id) {
+      document.getElementById(id).style.display = "block";
+    }
+
+    function closeModal(id) {
+      document.getElementById(id).style.display = "none";
+    }
+
+    updateCartDisplay();
   </script>
 </body>
 </html>
-
-
